# AI_tutor_chatbot

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/backend/: database.py  dependencies.py
app/backend/exception/: __init__.py  app_exceptions.py  handlers.py
app/backend/model/: __init__.py  chat_room.py  messages.py  uploaded_files.py  users.py
app/backend/repository/: chat_room_repository.py  messages_repository.py  uploaded_files_repository.py  user_repository.py
app/backend/router/: admin_router.py  ai_chat_router.py  chat_room_router.py  messages_router.py  uploaded_files_router.py  users_router.py
app/backend/schema/: ai_chat_schema.py  base_schema.py  chat_room_schema.py  messages_schema.py  uploaded_files_schema.py  users_schema.py
app/backend/service/: ai_chat_service.py  ai_client_service.py  chat_room_service.py  file_parser_service.py  jwt_login_service.py  messages_service.py  uploaded_files_service.py  user_service.py
app/backend/util/: email_utils.py  jwt_util.py
app/frontend/: main.py
app/frontend/api/: admin_api.py  auth_api.py  http_client.py  user_api.py
app/frontend/chat/: __init__.py  chat_api.py  chat_composer.py  chat_modals.py  (+3 more)
db/: dummy_data.sql  init.sql
infra/nginx/: default.conf
test/: conftest.py
test/repository/: test_chat_room_repository.py  test_user_repository.py
test/service/: post_uploaded_files_service_test.py  test_handle_chat_request_service.py  test_jwt_login_service.py  test_user_service.py
test/util/: test_jwt_util.py
(+5 files in other folders)
