[project]
name = "ai_tutor_chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi>=0.136.3", # FastAPI
    "loguru>=0.7.3",
    "mypy>=2.1.0",
    "openai>=2.38.0", # OpenAI
    "passlib>=1.7.4", # BCrype
    "pdfreader>=0.1.15",
    "psycopg2-binary>=2.9.12", # PostgreSQL Driver
    "pydantic>=2.13.4", # 요청/응답 DTO 검증
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2", # dot-env
    "python-jose>=3.5.0", # 로그인 (JWT)
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "requests>=2.34.2", # API Request
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.49", # JPA(?)
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0", # WAS Tomcat(?)
]
